on-game reverse block fix

--- a/portfolio/on-game/b-index.jade
+++ b/portfolio/on-game/b-index.jade
@@ -25,13 +25,13 @@ html(lang="en")
 					.section__wrapper
 						span.section__project-type Mobile Development
 						h1.section__title ON-GAME
-						p.section__text Due to the rise in popularity of mobile devices a sports betting company asked us to develop a mobile application. 
+						p.section__text.section__text--on-game Due to the rise in popularity of mobile devices a sports betting company asked us to develop a mobile application. 
 							span.section__text.section__text--hidden-on-mobile The project had to enable client’s audience to easily follow major sports’ updates, statistics, upcoming events, as well as to place a wager. The company’s audience already had a 5 million users, so the mobile application had to be compatible with the already existing website and moreover be convenient for the users. Based on client requirements, our team developed a technologically complex mobile application. Placing a wager through mobile app became the same simple as placing through the website. 
 							| ON-GAME gained more than 120 million sessions per month. The ability to find and watch particular game highlights was implemented through an extension to existing IPTV software. ON-GAME also has integrated video batch downloading.
 				
 				section.section.section--on-game-score-block(data-animation="fadeInUp")
 					.on-game-score-block
-						.on-game-score-block__logos
+						.on-game-score-block__logos(data-animations-group)
 							.on-game-score-block__logo(data-animation="zoomIn")
 								img(src="../../images/on-game/columb-logo.png", alt="columb-logo")
 							.on-game-score-block__logo(data-animation="zoomIn")
@@ -87,20 +87,20 @@ html(lang="en")
 							h3.project-features__item-title Performance Improvement
 							p.project-features__item-descr Desktop app performance was improved from 9 seconds to 5 seconds, mobile app performance was drastically improved from 30 seconds to 4 seconds.
 
-				section.section.section--without-padding-bottom.section--projects-reverse.section--on-game-big(data-animation="fadeInUp")
+				section.section.section--without-padding-bottom.section--projects-reverse.section--on-game-big(data-animation="fadeIn")
 					.section__wrapper
 						section.section.section--without-padding-top.section--without-padding-bottom
-							.section__inner(data-animation="fadeInLeft")
+							.section__inner.section__inner--first(data-animation="fadeInLeft")
 								h2.section__title Variety of sports
 								p.section__text The application allows users to follow their favorite teams, sportsmen, and sportswomen across more than 10 sports including Soccer, Basketball, Baseball, Hockey Tennis, Golf among others.
 							.section__decorative-img.section__decorative-img--on-game-phone-1(data-animation="fadeInRight")
 						section.section.section--without-padding-top.section--without-padding-bottom
-							.section__inner(data-animation="fadeInRight")
+							.section__inner.section__inner--second(data-animation="fadeInRight")
 								h2.section__title Real-time updates
 								p.section__text ON-GAME enables users to build a personalized feed and get the latest updates on the game. The users can customize ON-GAME in order to get instant alerts for upcoming games. The live commentary shows minute-by-minute match/game highlights.
 							.section__decorative-img.section__decorative-img--on-game-phone-2(data-animation="fadeInLeft")
 						section.section.section--without-padding-top.section--without-padding-bottom
-							.section__inner(data-animation="fadeInLeft")
+							.section__inner.section__inner--third(data-animation="fadeInLeft")
 								h2.section__title Statistics
 								p.section__text The application includes detailed statistics, schedules, makes possible to display team standings, fixtures, pre-match lineups, close game situations.
 							.section__decorative-img.section__decorative-img--on-game-phone-3(data-animation="fadeInRight")
