--- a/styl/blocks/tags.styl
+++ b/styl/blocks/tags.styl
@@ -1,3 +1,5 @@
+$animation-delay-step = 0.1s
+
 .tags
 	ul-reset()
 	display flex
@@ -19,4 +21,6 @@
 	border-radius 15px
 	background-color #f3f8ff
 	border solid 1px #e3eaf3
-	animation-delay 0.5s
+	for num in (1..15)
+		&:nth-child({num})
+			animation-delay $animation-delay-step*num
