--- a/styl/blocks/on-game-score-block.styl
+++ b/styl/blocks/on-game-score-block.styl
@@ -1,24 +1,48 @@
 $animation-delay-step-rows = 0.15s
 $animation-delay-step-logos = 0.2s
 
+.on-game-score-block
+	max-width 25rem
+	margin 0 auto
+
 .on-game-score-block__logos
 	position relative
 	display flex
+	justify-content space-around
 	height 206px
-	background-image url("../images/on-game/image-bg.png")
+	background-image url("../images/on-game/bg-image.png")
 	background-repeat no-repeat
 	background-size cover
 	background-position center
 	
-.on-game-score-block__logo
+.on-game-score-block__inner
+	display flex
+	flex-direction column
+	padding-top 1rem
+	padding-bottom 2rem
+	
+.on-game-score-block__logo-wrapper
 	position relative
-	top 7%
 	display flex
 	align-items flex-start
 	justify-content center
 	flex-grow 1
+	margin-bottom 1rem
 	img
+		position relative
+		top 7%
+		width 5rem
 		animation-delay 0.6s
+		
+.on-game-score-block__text
+	font-size 12px
+	font-weight 500
+	letter-spacing 1.2px
+	text-transform uppercase
+	text-align center
+	color #ffffff
+	&--dark
+		color #555
 	
 .on-game-score-block__table
 	width 100%
@@ -72,12 +96,16 @@ $animation-delay-step-logos = 0.2s
 @media $tablet-widths
 
 	.on-game-score-block
+		max-width none
 		width 25.125rem
-		margin 0 auto
 
 	.on-game-score-block__logos
-		height 280px
+		height 260px
 		margin 0.5rem 0
+		
+	.on-game-score-block__inner
+		padding-top 3rem
+		padding-bottom 3rem
 		
 @media $desktop-widths
 
@@ -87,3 +115,10 @@ $animation-delay-step-logos = 0.2s
 		width 50rem
 		> *
 			width 48%
+			
+	.on-game-score-block__logos
+		height 282px
+		
+		.on-game-score-block__inner
+			padding-top 4rem
+			padding-bottom 4rem
