--- a/styl/blocks/page-header.styl
+++ b/styl/blocks/page-header.styl
@@ -4,6 +4,7 @@
 		box-sizing border-box
 		height 100%
 		min-height 500px
+		background-color rgba($main-color, 0.9)
 		background-image url("../photos/landing-small.jpg")
 		background-repeat no-repeat
 		background-size cover
@@ -11,6 +12,7 @@
 	&--services-slide,
 	&--project
 		height 350px
+		background-color rgba($main-color, 0.9)
 		background-image url("../photos/landing-small.jpg")
 		background-repeat no-repeat
 		background-size cover
@@ -19,8 +21,8 @@
 	&--project-on-game
 		min-height 17rem
 		background-repeat no-repeat
-		background-image url("../photos/on-game/bg.jpg")
-		background-size 300%
+		background-image url("../photos/on-game/bg-1.jpg")
+		background-size cover
 		background-position center
 
 .page-header__wrapper
